tests/ui/missing_mut_call.stderr
error[E0202]: parameter `x` requires `mut` at the call site
  --> tests/ui/missing_mut_call.lex:7:11
    |
  7 |     touch(x);
    |           ^
 why: `touch` needs to change this value while it borrows it
 fix: write `mut x` when calling `touch`
