tests/ui/missing_mut_call.lex
fn touch(mut n: Int) {
    print(n);
}

fn main() {
    var x: Int = 1;
    touch(x);
}
